MatterReconstructor isPowered